objects/Lead_Disposition_Last_Event_Status__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Create a custom setting to map Oppty state and status to one of the below numbers. Only create platform event if a matching entry was fround in the custom setting. 

trigger should fire afterupdate of oppty if status/stage changed

We will need a mapping from the Oppty stage/status combination to on of the following values.  Note that only the numeric portion of the below list is to be populated in the event: SEE LMS-1671
1.  Sale (if oppty stage type changes to Closed/won) = Closed Won
2-  Meeting (oppty stage/status change: tbd) = Dealer Visit
3 - Letter (oppty stage/status change: tbd) = &lt;not used&gt;
4 - Phone (oppty stage/status change: tbd) = In Conversation
5 - Note (oppty stage/status change: tbd) = In Conversation
6 - Inactive (if oppty stage type chagnes to Closed/lost) = Closed Inactive
7 - email (oppty stage/status change: tbd) = In Conversations</description>
    <fields>
        <fullName>CurrentStatus__c</fullName>
        <label>Current Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Event__c</fullName>
        <label>Last Event</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StageName__c</fullName>
        <label>StageName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead_Disposition_Last_Event_Status</label>
</CustomObject>